# ros2_galactic_ws

./: .gitignore  README.md
src/cpp_publisher_pkg/: CMakeLists.txt  package.xml
src/cpp_publisher_pkg/src/: cpp_publisher.cpp  cpp_publisher.hpp  cpp_publisher_node.cpp  robot_news_station_node.cpp
src/cpp_subscriber_pkg/: CMakeLists.txt  package.xml
src/cpp_subscriber_pkg/src/: cpp_robot_news_subscriber.cpp  cpp_subscriber.cpp  cpp_subscriber.hpp
src/cpp_topic_naming_test/: CMakeLists.txt  package.xml
src/cpp_topic_naming_test/src/: topic_naming.cpp
src/efolkesson/: .gitignore
src/efolkesson/src/object_detection/camera_handler/: CMakeLists.txt  package.xml
src/efolkesson/src/object_detection/camera_handler/include/camera_handler/: camera_publisher.hpp  camera_subscriber.hpp
src/efolkesson/src/object_detection/camera_handler/src/: camera_publisher.cpp  camera_subscriber.cpp  show_camera_node.cpp
