<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_topic_naming_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="erik.folkesson@se.abb.com">erik</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>

  <depend>rclcpp</depend>
  <depend>camera_handler</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
